// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList Cell default 1`] = `
<div
  className="pf-c-data-list__cell"
>
  Secondary
</div>
`;

exports[`DataList Cells 1`] = `
<div
  className="pf-c-data-list__item-content"
>
  <Component
    className="data-list-custom"
    id="primary-item"
    key="list-id-1"
  >
    Primary Id
  </Component>
  <Component
    className="data-list-custom"
    id="primary-item"
    key="list-id-2"
  >
    Primary Id 2
  </Component>
</div>
`;

exports[`DataList DataListAction button 1`] = `
<div
  className="pf-c-data-list__item-action"
>
  <Component
    id="delete-item-1"
  >
    Delete
  </Component>
</div>
`;

exports[`DataList DataListAction dropdown 1`] = `
<div
  className="pf-c-data-list__item-action"
>
  <Dropdown
    className=""
    direction="down"
    dropdownItems={
      Array [
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          onClick={[MockFunction]}
          tooltip={null}
          tooltipProps={Object {}}
        >
          action-1
        </DropdownItem>,
        <DropdownItem
          className=""
          component="button"
          href=""
          isDisabled={false}
          isHovered={false}
          onClick={[MockFunction]}
          tooltip={null}
          tooltipProps={Object {}}
        >
          action-2
        </DropdownItem>,
      ]
    }
    isGrouped={false}
    isOpen={false}
    isPlain={true}
    onSelect={[Function]}
    position="right"
    toggle={
      <Kebab
        aria-label="Actions"
        className=""
        id=""
        isActive={false}
        isDisabled={false}
        isFocused={false}
        isHovered={false}
        isOpen={false}
        isPlain={false}
        onToggle={[Function]}
        parentRef={null}
      />
    }
  />
</div>
`;

exports[`DataList DataListContent 1`] = `
<section
  aria-label="Primary Content Details"
  className="pf-c-data-list__expandable-content"
  hidden={false}
  id=""
>
  <div
    className="pf-c-data-list__expandable-content-body"
  >
     test
  </div>
</section>
`;

exports[`DataList DataListContent noPadding 1`] = `
<section
  aria-label="Primary Content Details"
  className="pf-c-data-list__expandable-content"
  hidden={true}
  id=""
>
  <div
    className="pf-c-data-list__expandable-content-body pf-m-no-padding"
  >
    test
  </div>
</section>
`;

exports[`DataList Item 1`] = `
<li
  aria-labelledby="item-1"
  className="pf-c-data-list__item data-list-item-custom"
/>
`;

exports[`DataList Item default 1`] = `
<li
  aria-labelledby="item-1"
  className="pf-c-data-list__item"
/>
`;

exports[`DataList List 1`] = `
<ul
  aria-label="this is a simple list"
  className="pf-c-data-list data-list-custom"
/>
`;

exports[`DataList List default 1`] = `
<ul
  aria-label="this is a simple list"
  className="pf-c-data-list"
/>
`;

exports[`DataList item row default 1`] = `
<div
  className="pf-c-data-list__item-row"
/>
`;
